--- a/day02/round_button/round_button.css
+++ b/day02/round_button/round_button.css
@@ -1,28 +1,31 @@
+.button_layout {
+  display: flex;
+  padding-top: 5px;
+}
+
 .button {
-  color: white;
+  display: flex;
+  /* 중앙화 시켜주는 CSS */
+  justify-content: center;
+  align-items: center;
+
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.sky {
   background-color: skyblue;
-  border-radius: 50%;
-  padding: 14px;
 }
 
-i {
-  color: white;
-  font-size: 20px;
-}
-
-.button1 {
+.black {
   background-color: black;
-  /* 둥글게는 50% */
-  border-radius: 50%;
-  padding: 15px;
 }
 
 .email {
   color: white;
-  font-size: 20px;
 }
 
 .apple {
   color: white;
-  font-size: 20;
 }
