--- a/day03_review/icons/icons.css
+++ b/day03_review/icons/icons.css
@@ -1,42 +1,10 @@
-/* .button {
-  width: 400px;
-  height: 100px;
-  border: 1px solid #dbdbdb;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.button1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  gap: 10px;
-  border-radius: 5px;
-
-  align-items: center;
-
-  width: 200px;
-  height: 50px;
-
-  border: 1px solid black;
-  background-color: white;
-}
-
-.charge {
-  color: red;
-}
-
-.gas {
-  color: blue;
-} */
-
 .find_layout {
   background-color: #4a76ba;
   display: flex;
-  gap: 20px;
+  justify-content: center;
+  align-items: center;
+
+  gap: 40px;
 
   width: fit-content;
   padding: 30px;
@@ -65,4 +33,44 @@
 
 .blue {
   color: #4476fe;
+}
+
+/*  */
+/*  */
+/*  */
+
+.find_layout2 {
+  display: flex;
+  padding: 30px;
+  background-color: white;
+  gap: 20px;
+  width: fit-content;
+  justify-content: center;
+  /* border: 1px solid black; */
+}
+
+.find_button2 {
+  /* border: 1px solid black; */
+
+  width: 75px;
+  height: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  cursor: pointer;
+}
+
+.icon2 {
+  /* border: 1px solid black; */
+  text-align: center;
+  padding: 20px;
+  font-size: 30px;
+}
+
+.text2 {
+  font-weight: 400;
+  font-size: 12px;
+  text-align: ce;
 }
