--- a/day09/corporation/corporationmain.css
+++ b/day09/corporation/corporationmain.css
@@ -96,27 +96,51 @@
   height: 100%;
 }
 
-/* third */
+/* footer */
 
-.third {
+footer {
   width: 100%;
   height: 330px;
   padding: 100px 0;
   background-color: #333333;
 }
 
-.third__contents {
+.footer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  /* align-items: center; */
-  margin: 0 auto;
   max-width: 1200px;
-
-  /* list-style: none; */
+  margin: 0 auto;
+  color: #666;
+  gap: 20px;
 }
 
-.third__contens__nav {
+.footer__menu {
   display: flex;
-  justify-content: ;
+  justify-content: space-between;
+  color: #666;
+  border-bottom: 1px solid #666;
+  padding-bottom: 20px;
+  margin-top: 50px;
+}
+
+.footer__menu__logo {
+  font-size: 24px;
+  font-weight: 800;
+}
+
+.footer__menu__main {
+  display: flex;
+  gap: 20px;
+}
+
+.footer__con {
+  display: flex;
+  flex-direction: column;
+
+  gap: 10px;
+}
+
+.footer__con__con1 {
+  display: flex;
+  flex-direction: column;
 }
