--- a/day09/corporation/corporationmobile.css
+++ b/day09/corporation/corporationmobile.css
@@ -1,10 +1,15 @@
 /* mobile */
 @media screen and (max-width: 768px) {
   header {
-    max-width: 360px;
+    max-width: 350px;
   }
   main {
     display: block;
+    max-width: 350px;
+  }
+
+  .nav__navigation {
+    display: none;
   }
 }
 
