--- a/day10/withyouSecond.css
+++ b/day10/withyouSecond.css
@@ -1,64 +1,3 @@
-.first {
-  width: 100vw;
-  height: 100vh;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.first__container {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  padding-top: 50px;
-  max-width: 100rem;
-  width: 100%;
-
-  /* border: 1px solid black; */
-}
-
-.first__container_contents {
-  display: flex;
-  flex-direction: column;
-  gap: 35px;
-}
-
-.first__container_contents__text {
-  color: #97c125;
-  font-weight: 600;
-}
-
-.first__container_contents__title {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  font-weight: 800;
-  font-size: 60px;
-  gap: 10px;
-}
-
-.first__container_contents__subtitle {
-  display: flex;
-  flex-direction: column;
-  font-size: 18px;
-  gap: 10px;
-}
-
-.first__container_contents__button {
-  width: 185px;
-  height: 25px;
-  background-color: black;
-  color: white;
-  font-weight: 800;
-  font-size: 20px;
-  padding: 20px;
-  border-radius: 30px;
-  text-align: center;
-}
-
-/* second */
-
 .second {
   width: 100vw;
   height: 180vh;
@@ -134,23 +73,33 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-  /* background-color: rgba(0, 0, 0, 0.35); */
 }
 
 .card1__img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
+}
+
+.img-cover {
   position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.35);
+  z-index: 5;
+  border-radius: 50px;
 }
 
 .card1__text {
+  color: #ffffff;
   position: absolute;
   display: flex;
   flex-direction: column;
   gap: 20px;
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 
 .card1name {
@@ -190,12 +139,14 @@
 }
 
 .card2__text {
+  color: #ffffff;
   position: absolute;
   display: flex;
   flex-direction: column;
   gap: 20px;
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 
 .card2name {
@@ -238,12 +189,14 @@
 }
 
 .card3__text {
+  color: #ffffff;
   position: absolute;
   display: flex;
   flex-direction: column;
   gap: 20px;
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 
 .card3name {
@@ -294,12 +247,14 @@
 }
 
 .card4__text {
+  color: #ffffff;
   position: absolute;
   display: flex;
   flex-direction: column;
   gap: 20px;
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 
 .card4name {
@@ -348,6 +303,7 @@
   gap: 20px;
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 
 .card5name {
@@ -396,6 +352,7 @@
   gap: 20px;
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 
 .card6name {
@@ -418,285 +375,39 @@
   text-align: center;
 }
 
-/*               third               */
+/* mobile */
+@media screen and (max-width: 768px) {
+  .second__container {
+    display: flex;
+    flex-direction: column;
+  }
 
-.third {
-  width: 100%;
-  height: 500px;
-  position: relative;
+  .second__contents {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .second__contents__img {
+    display: none;
+  }
+
+  .second__contents__title {
+    text-align: center;
+    font-size: 50%;
+  }
+
+  .second__contents__cardlists {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: flex-end; */
+    /* width: 50%;
+    height: 50%; */
+    width: 100%;
+  }
+
+  .card1 {
+    size: 50%;
+  }
 }
 
-.third__img {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
-.third__contents {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 100rem;
-  gap: 20px;
-  /* align-items: center;
-  justify-content: center;
-  margin: 0 auto; */
-  margin: 250px 0 0 250px;
-}
-
-.third__title1 {
-  font-size: 70px;
-  font-weight: 800;
-  color: #ffffff;
-}
-
-.third__title2 {
-  display: flex;
-  flex-direction: column;
-  font-size: 20px;
-  font-weight: 800;
-  color: #ffffff;
-  gap: 10px;
-}
-
-.third__button {
-  width: 120px;
-  font-size: 1.125rem;
-  font-weight: 600;
-  line-height: 1.2em;
-  color: #fff;
-  padding: 1.25rem 3.6875rem;
-  border-radius: 100px 100px;
-  border: 1px solid #fff;
-  text-align: center;
-}
-
-/*                       fourth           */
-
-.fourth {
-  width: 100vw;
-  height: 100vh;
-  padding-top: 150px;
-}
-
-.fourth__container {
-  width: 100%;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 60px;
-  /* justify-content: center; */
-}
-
-.fourth__container__header {
-  font-size: 50px;
-  color: black;
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.fourth__container__cards {
-  display: flex;
-  /* flex-direction: column; */
-  width: 100%;
-  height: 300px;
-  justify-content: center;
-
-  gap: 100px;
-}
-
-.fourth__container__card {
-  display: flex;
-  gap: 15px;
-  border: 1px solid gray;
-  position: relative;
-  width: 320px;
-  align-items: center;
-  padding: 30px;
-  border-radius: 20px;
-}
-
-.cardcontainer {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
-.news {
-  color: #97c125;
-  font-weight: 600;
-}
-
-.fourth__container__card__text {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  font-size: 20px;
-  font-weight: 800;
-}
-
-.fourth__container__buttons {
-  display: flex;
-  gap: 30px;
-  justify-content: center;
-  align-items: center;
-}
-
-.button {
-  width: 500px;
-  height: 150px;
-  display: flex;
-  border: 1px solid gray;
-  padding: 8px 14px;
-  border-radius: 20px;
-  margin-top: 30px;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-}
-
-.fourth__button__logo {
-  width: 50px;
-  height: 50px;
-}
-
-.question {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.toptext {
-  font-size: 37px;
-  font-weight: 800;
-}
-
-.bottomtext {
-  font-size: 12px;
-}
-
-.button > i {
-  font-size: 40px;
-}
-
-/*                            fifth */
-
-.fifth {
-  width: 100%;
-  height: 800px;
-}
-
-.fifth__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-}
-
-.fifth__header {
-  font-size: 45px;
-  font-weight: 800;
-}
-
-.fifth__contents {
-  display: flex;
-  width: 70%;
-  /* border: 1px solid black; */
-  gap: 20px;
-}
-
-.fifth__img {
-  width: 400px;
-  height: 400px;
-}
-
-.fifth__img > img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.fifth__card {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  justify-content: center;
-}
-
-.fifth__card__title {
-  font-size: 35px;
-  font-weight: 800;
-}
-
-.fifth__card__subtitle {
-  overflow: hidden;
-}
-
-.fifth__button {
-  width: 150px;
-  height: 50px;
-  display: flex;
-  border: 1px solid gray;
-  padding: 8px 14px;
-  border-radius: 40px;
-  margin-top: 30px;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-}
-
-/*                      footer */
-footer {
-  width: 100%;
-  height: 300px;
-  background-color: black;
-}
-
-.footer {
-  display: flex;
-  width: 100%;
-  height: 240px;
-  max-width: 1200px;
-  /* align-items: center; */
-  justify-content: center;
-  padding-top: 40px;
-  justify-content: space-between;
-  margin: 0 auto;
-}
-
-.footer_01 {
-  display: flex;
-}
-
-.footer__logo {
-  color: white;
-  font-size: 30px;
-}
-
-.footer__address {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  color: white;
-  margin-left: 40px;
-}
-
-.footer__address__down {
-  margin-top: 20px;
-}
-
-.footer__icons {
-  display: flex;
-  color: white;
-  gap: 10px;
-  /* border: 1px solid white; */
-  height: 100%;
-  justify-content: flex-end;
-  align-items: flex-end;
-}
-
-/* https://withyoulove.co.kr/ */
+/* max-width, 배치도, 폰트만 바꿔주면 됨 */
